docs/recipes/yml/dashboard-fwdauth.ingress.yaml
# dashboard-fwdauth.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-forwardauth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod" # see `letsencrypt.issuer.yaml`
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-url: "https://forwardauth.domain.example/verify?uri=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-signin: "https://forwardauth.domain.example?uri=$scheme://$host$request_uri"

spec:
  tls:
    - hosts:
        - dashboard-forwardauth.domain.example
      secretName: dashboard-forwardauth-tls
  rules:
    - host: dashboard-forwardauth.domain.example
      http:
        paths:
          - path: /
            backend:
              serviceName: helm-dashboard-kubernetes-dashboard
              servicePort: https
