docs/recipes/yml/pomerium.ingress.yaml
# pomerium.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pomerium-authenticate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod" # see `le.issuer.yaml`
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - authenticate.domain.example
      secretName: pomerium-authenticate-external-tls
    - hosts:
        - forwardauth.domain.example
      secretName: pomerium-forwardauth-external-tls

  rules:
    - host: authenticate.domain.example
      http:
        paths:
          - path: /
            backend:
              serviceName: helm-pomerium-authenticate
              servicePort: https
    - host: forwardauth.domain.example
      http:
        paths:
          - path: /
            backend:
              serviceName: helm-pomerium-proxy
              servicePort: https
